--- a/requirements_flask_app.txt
+++ b/requirements_flask_app.txt
@@ -1,8 +1,8 @@
-Beaker==1.10.0
-Flask==0.10.1
-Jinja2==2.11.3
-MarkupSafe==0.23
-Werkzeug==0.14.1
-isodate==0.5.1
-itsdangerous==0.24
-requests==2.7.0
+Beaker>=1.13.0
+Flask>=2.3.2
+Jinja2>=3.1.2
+MarkupSafe>=2.1.1
+Werkzeug>=2.3.3
+isodate>=0.6.1
+itsdangerous>=2.1.2
+requests>=2.22.0
